# connector-x

./: .gitignore  Cargo.toml  Justfile  README.md  docker-compose.yml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-wheels.yaml  ci.yml  release.yml
connectorx/: Cargo.toml  build.rs
connectorx-ibm-informix-bridge/: Cargo.toml  build.rs
connectorx-ibm-informix-bridge/src/: lib.rs
connectorx-python/: Cargo.toml
connectorx-python/connectorx/: __init__.py
connectorx-python/connectorx/tests/: test_informix.py
connectorx-python/src/: errors.rs
connectorx-python/src/pandas/: get_meta.rs  mod.rs
connectorx-python/src/pandas/transports/: informix.rs  mod.rs
connectorx/src/: errors.rs  get_arrow.rs  lib.rs  partition.rs  source_router.rs
connectorx/src/destinations/arrow/: typesystem.rs
connectorx/src/destinations/arrowstream/: arrow_assoc.rs  typesystem.rs
connectorx/src/sources/: mod.rs
connectorx/src/sources/informix/: errors.rs  mod.rs  typesystem.rs
connectorx/src/sources/oracle/: mod.rs
connectorx/src/transports/: informix_arrow.rs  informix_arrowstream.rs  mod.rs  oracle_arrowstream.rs
connectorx/tests/: test_informix.rs
docs/: _toc.yml  databases.md
docs/databases/: informix.md
rust-docs/connectorx/transports/: struct.MsSQLArrowStreamTransport.html  struct.MsSQLArrowTransport.html  struct.MySQLArrowStreamTransport.html  struct.MySQLArrowTransport.html
rust-docs/connectorx/typesystem/: trait.TypeConversion.html
scripts/: informix.sql
(+4 files in other folders)
