[package]
name = "ibm_informix_bridge"
version = "0.1.0"
edition = "2021"
description = "Minimal safe Rust bridge to IBM Data Server Driver (libdb2) for Informix via DRDA"
build = "build.rs"

# Cargo uniqueness guard for native client linkage.
links = "informix_cli"

[dependencies]
thiserror = "1"

[dev-dependencies]
